[workspace]
members = ["crates/libs/*", "crates/apps/*", "crates/tools/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["oneofthezombies"]
repository = "https://github.com/oneofthezombies/kill-tree"
license = "MIT"

[workspace.dependencies]
cargo-husky = { version = "1", features = [
    "run-cargo-check",
    "run-cargo-clippy",
    "run-cargo-fmt",
] }
