[package]
name = "kill-tree"
version = "0.1.0"
authors = ["oneofthezombies"]
description = "Multi-platform library that kill the process also with all child processes."
edition = "2021"
repository = "https://github.com/oneofthezombies/kill-tree"
categories = ["system", "process"]
license = "MIT"
readme = "README.md"
keywords = ["process", "kill", "tree-kill", "kill-tree"]
workspace = "../"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27.1", features = ["signal"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
bindgen = "0.69.2"
