[package]
name = "kill-tree-cli"
version = "0.1.0"
authors = ["oneofthezombies"]
description = "CLI tool that kill the process also with all child processes."
edition = "2021"
repository = "https://github.com/oneofthezombies/kill-tree"
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
keywords = ["process", "kill", "tree-kill", "kill-tree"]

[dependencies]
kill-tree = { path = "../../libs/kill-tree" }
clap = { version = "4.4.18", features = ["cargo"] }
