[package]
name = "kill_tree_cli"
description = "A CLI tool that kills all of target process and child processes recursively not depending on the other commands."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
kill_tree = { path = "../../libs/kill_tree" }
clap = { version = "4.4.18", features = ["derive", "cargo"] }
tokio = { version = "1.36.0", features = ["full"] }
