[package]
name = "kill_tree_cli"
description = "🌳 Kill Tree is a CLI tool designed to terminate a specified process and all its child processes recursively, operating independently of other commands like kill or taskkill."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
kill_tree = { path = "../../libs/kill_tree" }
clap = { version = "4.4.18", features = ["derive", "cargo"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
