[package]
name = "kill_tree"
description = "A library that kills all of target process and its children recursively not depending on the other commands such as `kill`, `ps`, `pgrep`, `taskkill` or `wmic`."
categories = ["system", "process", "kill"]
keywords = ["process", "tree-kill", "kill", "ps", "pgrep", "taskkill", "wmic"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["test-util"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27.1", features = ["signal"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
bindgen = "0.69.2"
