[package]
name = "kill_tree"
description = "🌳 Kill Tree is a library designed to terminate a specified process and all its child processes recursively, operating independently of other commands like kill or taskkill."
keywords = ["process", "tree-kill", "kill", "taskkill", "terminate"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
tracing = "0.1.40"
tokio = { version = "1.36.0", features = ["full"], optional = true }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["test-util"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27.1", features = ["signal"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
bindgen = "0.69.2"

[features]
default = ["blocking"]
blocking = []
tokio = ["dep:tokio"]
